--- a/client/src/components/Board.css
+++ b/client/src/components/Board.css
@@ -2,7 +2,7 @@
 	display : grid;
 	grid-template-rows : 1fr 1fr 1fr;
 	grid-template-columns: 1fr 1fr 1fr;
-	padding : 4px;
+	padding : 0.6vh;
 	flex-grow: 1;
 	/* height : 90%;
 	width : 100%; */
@@ -37,14 +37,21 @@
 	user-select: none;
 }
 .minusRightBorder {
-	border-right: none;
+	border-right: solid 1px rgba(0,0,0,0);
 }
 .minusLeftBorder {
-	border-left : none;
+	border-left : solid 1px rgba(0,0,0,0);
 }
 .minusTopBorder {
-	border-top : none;
+	border-top : solid 1px rgba(0,0,0,0);
 }
 .minusBottomBorder {
-	border-bottom : none;
+	border-bottom : solid 1px rgba(0,0,0,0);
+}
+
+.piece {
+	margin: 10%;
+	border-radius: 50%;
+	flex-grow: 1;
+	aspect-ratio: 1;
 }
